objects/ASI_CRM_ID_Card_Volume__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_SG_Annual_Volume_Index_X__c</fullName>
        <formula>IF( ISBLANK( ASI_CRM_SG_Service_Mark__r.ASI_CRM_SG_Equivalent_Factor__c ) , ASI_CRM_SG_Annual_Volume__c, (ASI_CRM_SG_Annual_Volume__c * ASI_CRM_SG_Service_Mark__r.ASI_CRM_SG_Equivalent_Factor__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Volume Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Annual_Volume__c</fullName>
        <label>Annual Volumes - bottles</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Category_Index__c</fullName>
        <formula>ASI_CRM_SG_Service_Mark__r.ASI_CRM_SG_Equivalent_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Category__c</fullName>
        <formula>ASI_CRM_SG_Service_Mark__r.ASI_CRM_SG_Category__c</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Dose_Service__c</fullName>
        <label>Dose in Service Mark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_ID_Card__c</fullName>
        <label>ID Card</label>
        <referenceTo>ASI_CRM_ID_Card__c</referenceTo>
        <relationshipLabel>ID Card Volumes</relationshipLabel>
        <relationshipName>ID_Card_Volumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_No_Premium_Brands__c</fullName>
        <label>No. Premium Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_No_SuperPremium_Brands__c</fullName>
        <label>No. SuperPremium Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_No_Super_Ultra_Premium_Brands__c</fullName>
        <formula>ASI_CRM_SG_No_SuperPremium_Brands__c + ASI_CRM_SG_No_UltraPremium_Brands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. Super Ultra Premium Brands</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_No_UltraPremium_Brands__c</fullName>
        <label>No. UltraPremium Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Service_Mark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality</label>
        <referenceTo>ASI_CRM_Quality__c</referenceTo>
        <relationshipLabel>ID Card Volumes</relationshipLabel>
        <relationshipName>ASI_CRM_ID_Card_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ID Card Volume</label>
    <nameField>
        <displayFormat>IDvol-{0000}</displayFormat>
        <label>Nº ID Card Volume</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Card Volumes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_ID_Card_Volume</fullName>
        <active>true</active>
        <label>ASI CRM MY ID Card Volume</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_ID_Card_Volume</fullName>
        <active>true</active>
        <label>ASI CRM SG ID Card Volume</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_ID_Card_Volume</fullName>
        <active>true</active>
        <label>ASI CRM TH ID Card Volume</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_ID_Card_Volume</fullName>
        <active>true</active>
        <label>ASI CRM TW ID Card Volume</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>